<resources>
    <string name="app_name">Task Manager</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="login">LOGIN</string>
    <string name="password">Password</string>
    <string name="register_instead">Don\'t have an account? <b>Register Here</b></string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="email">Email</string>
    <string name="already_have_an_account_login_here">Already have an account? <b>Login Here</b></string>
    <string name="registration">Registration</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="phone_number">Phone number</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register">Register</string>
    <string name="okay">Okay</string>
    <string name="send">Send</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="feedback">Feedback</string>
    <string name="sign_out">Sign Out</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="your_name">Your name</string>
    <string name="no_internet_connection">No Internet Connection. You can\'t use this application without Internet Connection. Please turn on Wi-Fi or Mobile data and try again</string>
    <string name="your_age">Your age</string>
    <string name="please_wait">Please wait</string>
    <string name="save">SAVE</string>
    <string name="what_are_you_planning">What are you planning?</string>
    <string name="new_task">New Task</string>
    <string name="delete_task">Delete Task</string>
    <string name="hey">Hey</string>
    <string name="today_s_tasks">Today\'s Tasks</string>
    <string name="tomorrow_s_tasks">Tomorrow\'s Tasks</string>
    <string name="upcoming_tasks">Upcoming Tasks</string>
    <string name="you_are_free_today">You are\nfree today</string>
    <string name="you_have_no_task_to_do_today">You have no task to do today</string>
    <string name="add_new_task">Add New Task</string>
    <string name="modify_task">Modify Task</string>
    <string name="update">Update</string>
    <string name="pending_tasks">Pending Tasks</string>
    <string name="add_task">Add Task</string>
    <string name="are_you_sure_to_delete">Are you sure to delete this task?</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="welcome">Welcome</string>
    <string name="profile">Profile</string>
    <string name="completed_tasks">Completed Tasks</string>
    <string name="logout">Logout</string>
    <string name="no_completed_task_found">No completed task found</string>

</resources>