<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.register.RegisterActivity">

    <TextView
        android:id="@+id/tv_heading_registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/registration"
        android:textColor="@color/textColorDark"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/input_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:alpha="1"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgView_logo"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/ic_document"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <EditText
            android:id="@+id/ed_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_text_background"
            android:drawableStart="@drawable/ic_baseline_person_24"
            android:drawablePadding="16dp"
            android:hint="@string/your_name"
            android:inputType="textPersonName"
            android:padding="16dp"
            android:textSize="16sp"
            tools:ignore="Autofill,LabelFor" />

        <EditText
            android:id="@+id/ed_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_background"
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:drawablePadding="16dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            android:textSize="16sp"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/ed_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_background"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:drawablePadding="16dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="16dp"
            android:textSize="16sp"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/ed_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_background"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:drawablePadding="16dp"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="16dp"
            android:textSize="16sp"
            tools:ignore="Autofill" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_background_main"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:padding="5dp"
        android:text="@string/already_have_an_account_login_here"
        android:textColor="@color/textColorDark"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>