<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.tasks.AddTaskActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            app:contentInsetStart="0dp"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/toolbar_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/new_task"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <EditText
            android:id="@+id/edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/pick_date"
            android:background="@color/white"
            android:gravity="top"
            android:hint="@string/what_are_you_planning"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:padding="20dp"
            android:textColorHint="#CDD1D5" />


        <LinearLayout
            android:id="@+id/pick_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/deleteTask"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingHorizontal="30dp"
            android:paddingVertical="20dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:src="@drawable/ic_baseline_date_range_24"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/dateText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/deleteTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/save_btn"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingHorizontal="30dp"
            android:paddingVertical="20dp"
            android:visibility="gone"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:src="@drawable/ic_baseline_delete_outline_24"
                app:tint="@color/colorPrimary"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/delete_task"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>


        <Button
            android:id="@+id/save_btn"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:background="@color/colorPrimary"
            android:paddingVertical="8dp"
            android:text="@string/save"
            android:textColor="@color/white" />

    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>